# gestor-informacion

./: Cargo.toml  LICENSE  README.md  README.org
diagramas/: diagramas.drawio  sistema distribuido gestion de archivos.doc
src/: almacenamiento.rs  broker.rs  cliente.rs  communication.rs  dispatcher.rs  filelist.rs  storage.rs
src/communication/: connection.rs  distributedfiles.rs  filelist.rs  filesystem.rs  general.rs  mod.rs  network.rs
