[package]
name = "gestor-informacion"
version = "0.5.0"
authors = ["dhasane <danihas@live.com>"]
edition = "2018"

[[bin]]
name = "cliente"
path = "src/cliente.rs"

[[bin]]
name = "dispatcher"
path = "src/dispatcher.rs"

[[bin]]
name = "storage"
path = "src/storage.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "3"
actix-files = "0.5.0"
actix-multipart = "0.3.0"
actix-form-data = "0.5.0"

clap = "2.33"

serde = "1.0.125"
serde_json = "1.0"
reqwest = { version = "0.11.4", features = ["json", "blocking", "multipart"] }
rand = "0.8.3"

lazy_static = "1.4.0"

uuid = { version = "0.8", features = ["v4"] }
futures = "0.3.5"
futures-util = "0.3.15"
sanitize-filename = "0.2"
